plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

compileJava {
	options.compilerArgs << '-Xlint'
}

group = 'eu.helium-iot'
version = '0.0.1-SNAPSHOT'
java {
    sourceCompatibility = '21'
}

repositories {
	mavenCentral()
    //maven { url "https://repo.spring.io/milestone/" }
	maven { url "https://repo.eclipse.org/content/repositories/paho-releases/"}
}

bootJar {
	launchScript()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation group: 'org.eclipse.paho', name:'org.eclipse.paho.client.mqttv3', version: '1.2.5'
	implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.12.1'
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
	implementation group: 'redis.clients', name: 'jedis', version: '5.1.0'
	implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.25.5'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.15'
	implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.79'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
	implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.4.1'
	implementation group: 'com.stripe', name:'stripe-java', version:'24.10.0'
	implementation group: 'org.apache.pdfbox', name:'pdfbox', version:'3.0.1'
	implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '4.29.2'
	implementation group: 'io.grpc', name: 'grpc-protobuf', version:'1.69.0'
	implementation group: 'io.grpc', name: 'grpc-stub', version:'1.69.0'
	compileOnly group:'org.apache.tomcat', name:'annotations-api', version: '6.0.53'

	runtimeOnly group: 'io.grpc', name:'grpc-netty-shaded', version: '1.69.0'
	runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'
    runtimeOnly group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '10.4.1'
    //testImplementation 'org.springframework.boot:spring-boot-starter-test'
}


tasks.named('test') {
	useJUnitPlatform()
}
